# rasmcore

./: .gitignore  Cargo.toml  Cross.toml  Makefile  THIRD_PARTY_LICENSES  clippy.toml  deny.toml  package-lock.json  package.json
crates/rasmcore-all/: Cargo.toml
crates/rasmcore-all/src/: lib.rs
crates/rasmcore-cli/: Cargo.toml
crates/rasmcore-cli/src/: bench_pipeline.rs  gpu_executor.rs  gpu_executor_v2.rs  main.rs
crates/rasmcore-codecs-std/: Cargo.toml
crates/rasmcore-codecs-std/src/: lib.rs
crates/rasmcore-codecs-v2/: Cargo.toml
crates/rasmcore-codecs-v2/src/: convert.rs  decoders.rs  encoders.rs  lib.rs  v2_adapters.rs
crates/rasmcore-codecs-v2/tests/: roundtrip.rs
crates/rasmcore-codegen/: Cargo.toml
crates/rasmcore-codegen/src/: lib.rs  types.rs
crates/rasmcore-codegen/src/generate/: adapter.rs  cli_dispatch.rs  helpers.rs  manifest.rs  metrics.rs  mod.rs  pipeline.rs  pipeline_mapper.rs  pipeline_write.rs  sdk_rust.rs  transform.rs  wit.rs
crates/rasmcore-codegen/src/parse/: config_params.rs  encoders.rs  filters.rs  mappers.rs  metrics.rs  mod.rs  param_attr.rs  simple_regs.rs  transforms.rs
crates/rasmcore-color-transforms/: Cargo.toml
crates/rasmcore-color-transforms/licenses/: ACES.txt  ARRI.txt  BLACKMAGIC.txt  OCIO.txt
crates/rasmcore-color-transforms/src/: lib.rs  presets.rs  primaries.rs  transfer.rs
crates/rasmcore-color-transforms/transforms/csc/: acescct-to-cg.clf  acescg-to-cct.clf
crates/rasmcore-color-transforms/transforms/idt/: display-p3.clf  rec2020.clf  rec709.clf  srgb.clf
crates/rasmcore-color-transforms/transforms/ot/: p3-1000nits-dim.clf  p3-100nits-dim.clf  p3-48nits-dark.clf  rec2020-1000nits-dim.clf  rec2020-2000nits-dim.clf  rec2020-4000nits-dim.clf  rec2020-hlg-1000nits.clf  rec709-100nits.clf  srgb-100nits.clf
crates/rasmcore-deflate/: Cargo.toml
crates/rasmcore-deflate/src/: checksum.rs  deflate.rs  huffman.rs  inflate.rs  lib.rs
crates/rasmcore-filter-spatial/: Cargo.toml
crates/rasmcore-filter-spatial/src/: lib.rs
crates/rasmcore-filters-std/: Cargo.toml
crates/rasmcore-filters-std/src/: lib.rs
crates/rasmcore-gpu-native/: Cargo.toml
crates/rasmcore-gpu-native/src/: display.rs  lib.rs
crates/rasmcore-gpu-native/tests/: tiled_streaming.rs
crates/rasmcore-hevc/: Cargo.toml
crates/rasmcore-hevc/src/: bitread.rs  error.rs  filter.rs  frame.rs  lib.rs  nal.rs  params.rs  predict.rs  syntax.rs  testutil.rs  types.rs
crates/rasmcore-hevc/src/cabac/: context.rs  decoder.rs  mod.rs  tables.rs
crates/rasmcore-hevc/src/encode/: bitwrite.rs  cabac_enc.rs  mod.rs  (+5 more)
crates/rasmcore-hevc/tests/: bin_trace.rs  cabac.rs  heic_e2e.rs  parity.rs  transform.rs
crates/rasmcore-image/: BINARY_SIZE.md  Cargo.toml  PARITY.md  REFERENCE.md  build.rs
crates/rasmcore-image/benches/: RESULTS-2026-03-29.md  perf.rs  ref_tools.rs
crates/rasmcore-image/examples/: bench_codec.rs
crates/rasmcore-image/src/: lib.rs
crates/rasmcore-image/tests/: apng_reference_parity.rs  bench.rs  blur_reference_parity.rs  color_match_replace_parity.rs  color_space_parity.rs  compositor_grading_parity.rs  f32_filter_wave1.rs  f32_rounding_proof.rs  filter_reference_parity.rs  gpu_parity.rs  lut_reference_parity.rs  metadata_api.rs  metrics_reference_parity.rs  noise_regression.rs  opencv_parity.rs  parity.rs  photo_enhance_parity.rs  pro_filter_parity.rs  reference_16bit.rs  reference_audit.rs
crates/rasmcore-isobmff/: Cargo.toml
crates/rasmcore-isobmff/src/: assembly.rs  boxreader.rs  boxwriter.rs  error.rs  ftyp.rs  lib.rs  meta.rs  properties.rs  types.rs  writer.rs
crates/rasmcore-jpeg/: COVERAGE.md  Cargo.toml
crates/rasmcore-jpeg/src/: color.rs  dct.rs  decode.rs  decode_arith.rs  entropy.rs  error.rs  lib.rs  markers.rs  qm_coder.rs  quantize.rs  trellis.rs  types.rs
crates/rasmcore-jpeg/tests/: parity.rs
crates/rasmcore-ml/: Cargo.toml
crates/rasmcore-ml/src/: lib.rs
crates/rasmcore-pipeline-v2/: CLAMP_AUDIT.md  Cargo.toml
crates/rasmcore-pipeline-v2/benches/: gpu_pipeline.rs
crates/rasmcore-pipeline-v2/src/: aces.rs  aces_audit.rs  analysis_buffer.rs  cache.rs  camera_idt.rs  cdl.rs  color_convert.rs  color_math.rs  color_space.rs  color_transform.rs  compositor_node.rs  demand.rs  filter_node.rs  font.rs  fusion.rs  gpu.rs  gpu_macros.rs  graph.rs  hash.rs  image_metadata.rs  layer_cache.rs  lib.rs  lmt.rs  ml_node.rs  node.rs  noise.rs  ops.rs  rect.rs  registry.rs  staged.rs  trace.rs  undo.rs
crates/rasmcore-pipeline-v2/tests/: filter_parity.rs  filter_reference.rs  gpu_correctness.rs
crates/rasmcore-qoi/: COVERAGE.md  Cargo.toml
crates/rasmcore-qoi/src/: lib.rs
crates/rasmcore-raw/: Cargo.toml
crates/rasmcore-raw/src/: color.rs  demosaic.rs  dng.rs  lib.rs  ljpeg.rs  tiff.rs
crates/rasmcore-raw/tests/: parity.rs
crates/rasmcore-reference/: AUTHORITY.md  Cargo.toml  VALIDATION.md
crates/rasmcore-reference/golden/: .gitignore  generate.py  pyproject.toml
crates/rasmcore-reference/src/: color_ops.rs  color_ops2.rs  composite_ops.rs  distortion_ops.rs  edge_ops.rs  effect_ops.rs  enhancement_ops.rs  enhancement_ops2.rs  evaluate_ops.rs  grading_ops.rs  grading_ops2.rs  lib.rs  point_ops.rs  spatial_ops.rs  spatial_ops2.rs
crates/rasmcore-reference/tests/: golden.rs
crates/rasmcore-sdk-v2/: Cargo.toml
crates/rasmcore-sdk-v2/src/: lib.rs
crates/rasmcore-v2-wasm/: Cargo.toml
crates/rasmcore-v2-wasm/src/: lib.rs
crates/rasmcore-webp/: Cargo.toml
crates/rasmcore-webp/src/: bitstream.rs  block.rs  boolcoder.rs  color.rs  config.rs  container.rs  cost_engine.rs  dct.rs  decimate.rs  error.rs  filter.rs  lib.rs  predict.rs  proba.rs  quant.rs  ratecontrol.rs  rdo.rs  reconstruct.rs  segment.rs  tables.rs  token.rs
crates/rasmcore-webp/tests/: encode_decode.rs  parity.rs
sdks/python/: README.md  pyproject.toml
sdks/python/rasmcore/: __init__.py  runtime.py  typegen.py  types.py
tests/codec-parity/: Cargo.toml
tests/codec-parity/src/: lib.rs
tests/codec-parity/tests/: blend_parity.rs  lossless_parity.rs  lossy_parity.rs  motion_blur_parity.rs  reference_parity.rs
(+2802 files in other folders)
