[workspace]
resolver = "2"
members = [
    "crates/rasmcore-bitio",
    "crates/rasmcore-deflate",
    "crates/rasmcore-pipeline",
    "crates/rasmcore-color",
    "crates/rasmcore-image",
    "crates/rasmcore-webp",
    "crates/rasmcore-jxl",
    "crates/rasmcore-lzw",
    "crates/rasmcore-qoi",
    "crates/rasmcore-pnm",
    "crates/rasmcore-bmp",
    "crates/rasmcore-tga",
    "tests/wasm-integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
image = { version = "0.25", default-features = false }
