[workspace]
resolver = "2"
members = [
    "crates/rasmcore-bitio",
    "crates/rasmcore-deflate",
    "crates/rasmcore-pipeline",
    "crates/rasmcore-color",
    "crates/rasmcore-image",
    "crates/rasmcore-webp",
    "crates/rasmcore-jpeg",
    "crates/rasmcore-jxl",
    "crates/rasmcore-lzw",
    "crates/rasmcore-qoi",
    "crates/rasmcore-pnm",
    "crates/rasmcore-bmp",
    "crates/rasmcore-tga",
    "crates/rasmcore-fits",
    "crates/rasmcore-raw",
    "crates/rasmcore-isobmff",
    "crates/rasmcore-dct",
    "crates/rasmcore-hevc",
    "crates/rasmcore-trellis",
    "crates/rasmcore-macros",
    "crates/rasmcore-filter-spatial",
    "crates/rasmcore-filter-color",
    "crates/rasmcore-filter-edge",
    "crates/rasmcore-filter-alpha",
    "crates/rasmcore-filter-histogram",
    "crates/rasmcore-filter-enhance",
    "crates/rasmcore-filter-advanced",
    "crates/rasmcore-filters-std",
    "crates/rasmcore-codec-png",
    "crates/rasmcore-codec-jpeg",
    "crates/rasmcore-codec-webp",
    "crates/rasmcore-codec-gif",
    "crates/rasmcore-codec-tiff",
    "crates/rasmcore-codec-avif",
    "crates/rasmcore-codec-bmp",
    "crates/rasmcore-codec-ico",
    "crates/rasmcore-codec-qoi",
    "crates/rasmcore-codec-jxl",
    "crates/rasmcore-codec-jp2",
    "crates/rasmcore-codec-svg",
    "crates/rasmcore-codec-fits",
    "crates/rasmcore-codecs-std",
    "crates/rasmcore-all",
    "tests/wasm-integration",
    "tests/codec-parity",
    "examples/custom-filter",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.lints.rust]
unused_imports = "deny"
unused_variables = "warn"
dead_code = "warn"
unused_assignments = "warn"
unused_mut = "warn"

[workspace.lints.clippy]
needless_range_loop = "warn"
unnecessary_cast = "warn"
redundant_closure = "warn"
collapsible_if = "warn"

[workspace.dependencies]
image = { version = "0.25", default-features = false }
