[package]
name = "rasmcore-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Graph-based image processing CLI for rasmcore"

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:pollster"]

[dependencies]
rasmcore-image = { path = "../rasmcore-image" }
rasmcore-pipeline = { path = "../rasmcore-pipeline" }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }

[[bin]]
name = "rcim"
path = "src/main.rs"

[lints]
workspace = true
