[package]
name = "rasmcore-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Graph-based image processing CLI for rasmcore"

[features]
default = ["gpu"]
gpu = ["dep:rasmcore-gpu-native"]

[dependencies]
rasmcore-pipeline-v2 = { path = "../rasmcore-pipeline-v2" }
rasmcore-gpu-native = { path = "../rasmcore-gpu-native", optional = true }

[[bin]]
name = "rcim"
path = "src/main.rs"

[[bin]]
name = "bench-pipeline"
path = "src/bench_pipeline.rs"
required-features = ["gpu"]

[lints]
workspace = true
