[package]
name = "rasmcore-codecs-v2"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "V2 codec implementations — unified f32 decode/encode for all image formats"

[dependencies]
rasmcore-image = { path = "../rasmcore-image" }
rasmcore-pipeline-v2 = { path = "../rasmcore-pipeline-v2" }
inventory = "0.3"

[dev-dependencies]
rasmcore-image = { path = "../rasmcore-image" }

[lints]
workspace = true
