[package]
name = "rasmcore-codegen"
version = "0.1.0"
edition = "2021"
description = "Code generation for rasmcore — parse Rust source AST, produce manifests and adapter code"
publish = false

[dependencies]
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
