[package]
name = "rasmcore-deflate"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Pure Rust deflate/inflate with shared Huffman coding — for PNG, TIFF, and zlib streams"

[dependencies]
rasmcore-bitio = { path = "../rasmcore-bitio" }

[lints]
workspace = true
