[package]
name = "rasmcore-filters-std"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "All standard rasmcore filters — meta-crate pulling in all filter categories"

[dependencies]
rasmcore-filter-spatial = { path = "../rasmcore-filter-spatial" }
rasmcore-filter-color = { path = "../rasmcore-filter-color" }
rasmcore-filter-edge = { path = "../rasmcore-filter-edge" }
rasmcore-filter-alpha = { path = "../rasmcore-filter-alpha" }
rasmcore-filter-histogram = { path = "../rasmcore-filter-histogram" }
rasmcore-filter-enhance = { path = "../rasmcore-filter-enhance" }
rasmcore-filter-advanced = { path = "../rasmcore-filter-advanced" }
