[package]
name = "rasmcore-gpu-native"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Native wgpu GPU executor for rasmcore V2 pipeline"

[dependencies]
rasmcore-pipeline-v2 = { path = "../rasmcore-pipeline-v2" }
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

[lints]
workspace = true
