[package]
name = "rasmcore-hevc"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Pure Rust HEVC/H.265 intra-frame decoder for HEIC still images"

[dependencies]
rasmcore-bitio = { path = "../rasmcore-bitio" }
rasmcore-color = { path = "../rasmcore-color" }
rasmcore-dct = { path = "../rasmcore-dct" }
rasmcore-isobmff = { path = "../rasmcore-isobmff" }

[dev-dependencies]
