[package]
name = "rasmcore-image"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rasmcore-pipeline = { path = "../rasmcore-pipeline" }
rasmcore-webp = { path = "../rasmcore-webp" }
fast_image_resize = "5"
libblur = "0.15"
moxcms = "0.8"
wit-bindgen-rt = "0.41.0"
image = { workspace = true, features = [
    "png", "jpeg", "gif", "webp", "bmp", "tiff", "avif", "ico", "qoi",
    "tga", "hdr", "pnm", "exr", "dds",
] }
rasmcore-jpeg = { path = "../rasmcore-jpeg" }
exif = { version = "0.6.1", package = "kamadak-exif" }
xmp-writer = "0.3.2"
quick-xml = "0.39.2"
tiff = "0.11"
jxl-oxide = "0.12"
justjp2 = { version = "0.1", default-features = false }

# Native codec crates (optional, feature-gated)
rasmcore-qoi = { path = "../rasmcore-qoi", optional = true }
rasmcore-pnm = { path = "../rasmcore-pnm", optional = true }
rasmcore-bmp = { path = "../rasmcore-bmp", optional = true }
rasmcore-tga = { path = "../rasmcore-tga", optional = true }
rasmcore-isobmff = { path = "../rasmcore-isobmff", optional = true }
rasmcore-hevc = { path = "../rasmcore-hevc", optional = true }

[features]
default = []
native-qoi = ["dep:rasmcore-qoi"]
native-pnm = ["dep:rasmcore-pnm"]
native-bmp = ["dep:rasmcore-bmp"]
native-tga = ["dep:rasmcore-tga"]
native-trivial = ["native-qoi", "native-pnm", "native-bmp", "native-tga"]
native-heif = ["dep:rasmcore-isobmff"]
# Patent-encumbered — adds HEVC decode capability for HEIC files.
# The nonfree- prefix makes licensing implications unmistakable.
nonfree-hevc = ["native-heif", "dep:rasmcore-hevc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
zenjpeg = { version = "0.6", features = ["trellis"] }
butteraugli = "0.9"
dssim-core = "3.4"
imgref = "1.12.0"
rgb = "0.8.53"

[package.metadata.component]
package = "rasmcore:image"
target.path = "../../wit/image"

[package.metadata.component.target.dependencies]
"rasmcore:core" = { path = "../../wit/core" }
