[package]
name = "rasmcore-image"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rasmcore-pipeline = { path = "../rasmcore-pipeline" }
rasmcore-pipeline-v2 = { path = "../rasmcore-pipeline-v2" }
rasmcore-gpu-shaders = { path = "../rasmcore-gpu-shaders" }
rasmcore-kernel = { path = "../rasmcore-kernel" }
rasmcore-macros = { path = "../rasmcore-macros" }
inventory = "0.3"
base64 = "0.22"
rasmcore-webp = { path = "../rasmcore-webp" }
fast_image_resize = "5"
moxcms = "0.8"
png = "0.17"
rasmcore-fits = { path = "../rasmcore-fits" }
rasmcore-jpeg = { path = "../rasmcore-jpeg" }
exif = { version = "0.6.1", package = "kamadak-exif" }
xmp-writer = "0.3.2"
quick-xml = "0.39.2"
tiff = "0.11"
gif = "0.14"
color_quant = "1.1"
image-webp = "0.2"
exr = "1.74"
half = { version = "2.7", default-features = false }
jxl-oxide = "0.12"
justjp2 = { version = "0.1", default-features = false }
resvg = "0.44"
fontdue = "0.9"
rustybuzz = "0.18"
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
bcdec_rs = "0.2"
rhai = "1"

# Native codec crates (optional, feature-gated)
rasmcore-qoi = { path = "../rasmcore-qoi", optional = true }
rasmcore-pnm = { path = "../rasmcore-pnm", optional = true }
rasmcore-bmp = { path = "../rasmcore-bmp", optional = true }
rasmcore-tga = { path = "../rasmcore-tga", optional = true }
rasmcore-color = { path = "../rasmcore-color", optional = true }
rasmcore-raw = { path = "../rasmcore-raw", optional = true }
rasmcore-isobmff = { path = "../rasmcore-isobmff", optional = true }
rasmcore-hevc = { path = "../rasmcore-hevc", optional = true }

[features]
default = ["native-trivial"]
native-qoi = ["dep:rasmcore-qoi"]
native-pnm = ["dep:rasmcore-pnm"]
native-bmp = ["dep:rasmcore-bmp"]
native-tga = ["dep:rasmcore-tga"]
native-raw = ["dep:rasmcore-raw"]
native-trivial = ["native-qoi", "native-pnm", "native-bmp", "native-tga"]
native-heif = ["dep:rasmcore-isobmff"]
# Patent-encumbered — adds HEVC decode capability for HEIC files.
# The nonfree- prefix makes licensing implications unmistakable.
nonfree-hevc = ["native-heif", "dep:rasmcore-hevc", "dep:rasmcore-color"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
zenjpeg = { version = "0.6", features = ["trellis"] }
butteraugli = "0.9"
dssim-core = "3.4"
imgref = "1.12.0"
rgb = "0.8.53"
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "24"
pollster = "0.4"

[[bench]]
name = "perf"
harness = false

[build-dependencies]
rasmcore-codegen = { path = "../rasmcore-codegen" }
syn = { version = "2", features = ["full", "parsing"] }
naga = { version = "24", features = ["wgsl-in"] }

[lints]
workspace = true
