[package]
name = "rasmcore-raw"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Pure Rust DNG RAW image decoder — Bayer demosaic, color matrix pipeline"

[dependencies]
# No external dependencies — TIFF/IFD parsing, lossless JPEG, demosaic all from spec

[dev-dependencies]

[lints]
workspace = true
