[package]
name = "rasmcore-sdk-v2"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Native Rust SDK for V2 pipeline — codegen fluent API + wgpu GPU"

[dependencies]
rasmcore-pipeline-v2 = { path = "../rasmcore-pipeline-v2" }
rasmcore-codecs-v2 = { path = "../rasmcore-codecs-v2" }
rasmcore-gpu-native = { path = "../rasmcore-gpu-native" }

[lints]
workspace = true
