[package]
name = "rasmcore-webp"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Pure Rust VP8 lossy encoder for WebP images (RFC 6386)"

[dependencies]
rasmcore-color = { path = "../rasmcore-color" }

[dev-dependencies]
# For parity testing against reference implementations
image = { workspace = true, features = ["webp", "png"] }
